# cachevoice

./: .dockerignore  .gitignore  Dockerfile  cachevoice.example.yaml  docker-compose.yml  fillers.json  pyproject.toml
.github/workflows/: deploy-skill.yml  deploy.yml  test.yml
.sisyphus/notepads/cachevoice-deep-analysis/: decisions.md  issues.md  learnings.md  problems.md
cachevoice/: __init__.py  config.py  server.py
cachevoice/cache/: __init__.py  evictor.py  hot.py  matcher.py  metadata.py  normalizer.py  store.py
cachevoice/fillers/: __init__.py  manager.py
cachevoice/gateway/: __init__.py  edge.py  elevenlabs.py  fallback.py  litellm_router.py  mapping.py  minimax.py  openai.py
nginx/: .htpasswd  .htpasswd.example  nginx.conf
tests/: __init__.py  test_api_contract.py  test_cache.py  test_edge_tts.py  test_fallback.py  test_fuzzy_hit_count.py  test_integration.py  test_litellm_integration.py  test_mapping.py  test_metadata.py  test_normalizer.py
