[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cachevoice"
version = "0.1.0"
description = "TTS cache proxy - speech-gateway fork"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "aiofiles>=24.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rapidfuzz>=3.6",
    "pyyaml>=6.0",
    "litellm>=1.55",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools]
packages = ["cachevoice"]
